erDiagram

    CatalogSet ||--o{ OwnedSet : owned_as
    StorageLocation ||--o{ OwnedSet : stores
    CatalogSet ||--o{ BarcodeMapping : identified_by

    CatalogSet {
        LONG id PK
        STRING bricklink_no
        STRING name
        INTEGER year_released
        STRING theme
        STRING image_url
        INSTANT last_synced_at
        ENUM sync_status
        INT version
        INSTANT created_at
        INSTANT updated_at
    }

    OwnedSet {
        LONG id PK
        LONG catalog_set_id FK
        LONG storage_location_id FK
        ENUM condition
        DATE purchase_date
        DATE sold_at
        INSTANT created_at
        INSTANT updated_at
        INT version
        STRING acquisition_method
    }

    StorageLocation {
        LONG id PK
        STRING code
        STRING description
        INSTANT created_at
        INSTANT updated_at
    }

    BarcodeMapping {
        STRING barcode PK
        LONG catalog_set_id FK
    }

    InventoryEvent {
        LONG id PK
        LONG owned_set_id FK
        STRING event_type
        STRING details
        INSTANT created_at
    }
